# fastapi_test

./: .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  management.py  models.py  pyproject.toml  router.py  schemas.py  telegram_main.py
fastapi_auth/: auth.py  manager.py  models.py  schemas.py
fastapi_server/: management.py  models.py  router.py  schemas.py
telegram_bot/: handlers.py  states.py
